tests/single_instruction_translation_validation/mcsema/register-variants/vpsllq_ymm_ymm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:211:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %7) #22
            ^
0.01user 0.01system 0:00.02elapsed 103%CPU (0avgtext+0avgdata 27636maxresident)k
0inputs+16outputs (0major+3271minor)pagefaults 0swaps
